--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div class="container">
         <div class="animations-wrapper">
             <div class="animation-bubble bubble-driptrade" id="driptrade-animation" onclick="showWin95Alert()"></div>
-            <a href="https://x.com/catloaf_hl" target="_blank" class="animation-bubble bubble-hell" id="hell-animation"></a>
+            <a href="https://x.com/catloaf_hl" target="_blank" class="animation-bubble bubble-hell"
+                id="hell-animation"></a>
             <a href="https://hx.finance" target="_blank" class="animation-bubble bubble-exchange"
                 id="exchange-animation"></a>
         </div>
@@ -34,9 +35,9 @@
             <span class="separator">•</span>
             <span>FLUFFY. FURIOUS. FERMENTED.</span>
             <span class="separator">•</span>
-            <span>CATLOAF: CARBS, CHAOS, CONTEMPT.</span>
+            <span>CATLOAF: CARBS, CHAOS, CONTEMPT</span>
             <span class="separator">•</span>
-            <span>KNEADED BY FATE. DRIVEN BY HATE.</span>
+            <span>KNEADED BY FATE. DRIVEN BY HATE</span>
             <span class="separator">•</span>
             <span>THE SKIES WILL BURN</span>
             <span class="separator">•</span>
@@ -44,11 +45,11 @@
             <span class="separator">•</span>
             <span>YOUR FAVOURITE CARB-BASED WAR CRIMINAL!</span>
             <span class="separator">•</span>
-            <span>FLUFFY. FURIOUS. FERMENTED.</span>
+            <span>FLUFFY. FURIOUS. FERMENTED</span>
             <span class="separator">•</span>
-            <span>CATLOAF: CARBS, CHAOS, CONTEMPT.</span>
+            <span>CATLOAF: CARBS, CHAOS, CONTEMPT</span>
             <span class="separator">•</span>
-            <span>KNEADED BY FATE. DRIVEN BY HATE.</span>
+            <span>KNEADED BY FATE. DRIVEN BY HATE</span>
             <span class="separator">•</span>
             <span>THE SKIES WILL BURN</span>
             <span class="separator">•</span>
