--- a/index.html
+++ b/index.html
@@ -8,28 +8,52 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js"></script>
 </head>
 
-<body>
-    <div class="container">
-        <div class="animations-wrapper">
-            <div class="animation-bubble bubble-driptrade" id="driptrade-animation" onclick="showWin95Alert()"></div>
-            <a href="https://x.com/catloaf_hl" target="_blank" class="animation-bubble bubble-hell"
-                id="hell-animation"></a>
-            <a href="https://hx.finance" target="_blank" class="animation-bubble bubble-exchange"
-                id="exchange-animation"></a>
+<body class="bg-pink-300">
+    <div class="min-h-screen flex flex-col">
+        <div class="flex-1 flex items-center justify-center p-4">
+            <div class="relative w-full max-w-sm md:max-w-4xl">
+                <!-- Mobile Layout -->
+                <div class="md:hidden flex flex-col items-center justify-center" style="min-height: calc(100vh - 60px);">
+                    <!-- Mobile Speech Bubbles - Bigger and better positioned -->
+                    <div class="relative w-full max-w-sm h-80 -mb-12">
+                        <div class="absolute top-0 left-2 w-64 h-36 z-30" id="driptrade-animation-mobile" onclick="showWin95Alert()"></div>
+                        <a href="https://hx.finance" target="_blank" class="absolute top-20 right-0 w-64 h-36 z-20 block" id="exchange-animation-mobile"></a>
+                        <a href="https://x.com/catloaf_hl" target="_blank" class="absolute top-36 left-2 w-60 h-36 z-10 block" id="hell-animation-mobile"></a>
+                    </div>
+                    <!-- Mobile Catloaf - Bigger -->
+                    <div class="relative w-80 h-80">
+                        <div id="catloaf-animation-mobile" class="w-full h-full"></div>
+                    </div>
+                </div>
+
+                <!-- Desktop Layout -->
+                <div class="hidden md:flex md:flex-col md:items-center md:justify-center" style="min-height: calc(100vh - 80px);">
+                    <div class="relative">
+                        <!-- Desktop Speech Bubbles positioned around catloaf -->
+                        <div class="absolute -top-40 left-1/2 -translate-x-1/2 w-80 h-40 z-10">
+                            <div id="hell-animation" class="w-full h-full"></div>
+                        </div>
+                        <a href="https://hx.finance" target="_blank" class="absolute top-0 -left-80 w-80 h-40 z-10 block">
+                            <div id="exchange-animation" class="w-full h-full"></div>
+                        </a>
+                        <div class="absolute top-0 -right-80 w-80 h-40 z-10" onclick="showWin95Alert()">
+                            <div id="driptrade-animation" class="w-full h-full"></div>
+                        </div>
+                        <!-- Desktop Catloaf -->
+                        <div class="relative w-[450px] h-[450px]">
+                            <div id="catloaf-animation" class="w-full h-full"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <div class="catloaf-container">
-            <div id="catloaf-animation"></div>
-            <div class="catloaf-text"></div>
-            <div class="nft-text"></div>
-        </div>
-    </div>
-
-    <div class="ticker-tape">
+    <div class="ticker-tape fixed bottom-0 w-full">
         <div class="ticker-tape-content">
             <span>YOUR FAVOURITE CARB-BASED WAR CRIMINAL!</span>
             <span class="separator">•</span>
