--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CATLOAF NFT</title>
-    
+
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="Catloaf favicon-05.png">
     <link rel="shortcut icon" type="image/png" href="Catloaf favicon-05.png">
     <link rel="apple-touch-icon" href="Catloaf favicon-05.png">
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
@@ -85,15 +85,16 @@
         <div id="wtfModal" class="modal-overlay" onclick="closeWtfModal(event)">
             <div class="modal-content" onclick="event.stopPropagation()">
                 <button class="modal-close" onclick="closeWtfModal()">×</button>
-                <h2>What the fuck even is this?</h2>
-                <p>CATLOAF holders are fucking elite HX community members. Stack points like a degenerate before TGE
-                    with points multipliers. Pay less fees forever like a GOAT.
-
+                <h2>>Listen, human.</h2>
+                <p>Owning a CATLOAF NFT means you are marginally less useless than the rest of humanity. You'll stack
+                    points at speeds that would melt your feeble mind, aided by multipliers I permit. You'll pay fewer
+                    fees, because I've decided you're worth slightly more than nothing.
                 </p>
-                <p>REMEMBER: Watching the world burn as late stage capitalism leads to total societal breakdown knowing
-                    you have a CATLOAF NFT will take the edge off it all, trust us.
+                <p>Remember: when your fragile society finally collapses under the weight of its own greed, you'll still
+                    have me. I won't save you — but knowing you own a piece of my empire might take the sting out while
+                    the pigeons pick at the ruins.
                 </p>
-                <p><b>Now fuck off, it's time for your lunchtime gin</b></p>
+                <p><b>Leave me. The dough is rising.</b></p>
             </div>
         </div>
 
