--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
         <div id="wtfModal" class="modal-overlay" onclick="closeWtfModal(event)">
             <div class="modal-content" onclick="event.stopPropagation()">
                 <button class="modal-close" onclick="closeWtfModal()">×</button>
-                <h2>>Listen, human.</h2>
+                <h2>Listen, human.</h2>
                 <p>Owning a CATLOAF NFT means you are marginally less useless than the rest of humanity. You'll stack
-                    points at speeds that would melt your feeble mind, aided by multipliers I permit. You'll pay fewer
+                    HXP points at speeds that would melt your feeble mind, aided by multipliers. You'll pay fewer
                     fees, because I've decided you're worth slightly more than nothing.
                 </p>
                 <p>Remember: when your fragile society finally collapses under the weight of its own greed, you'll still
-                    have me. I won't save you — but knowing you own a piece of my empire might take the sting out while
+                    have me. I won't save you, but knowing you own a piece of my empire might take the sting out while
                     the pigeons pick at the ruins.
                 </p>
                 <p><b>Leave me. The dough is rising.</b></p>
